# flake-updater

./: .gitignore  default.nix  flake.nix  meson.build
src/: dir.c  dir.h  main.c  pkg.c  pkg.h
